--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Satisfy&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
 body {
   font-family: 'Permanent Marker', cursive;
   font-weight: bolder;
+}
+
+.righteous {
+  font-family: 'Righteous', cursive;
+}
+
+.secret {
+  opacity: 0;
+  pointer-events: none;
 }
